--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Context\ContextulLifestyle.cs" />
     <Compile Include="Infrastructure\CollectionExtensions.cs" />
     <Compile Include="Infrastructure\ConcurrentDictionaryExtensions.cs" />
+    <Compile Include="Infrastructure\FastExpressionCompiler.cs" />
     <Compile Include="Infrastructure\TypeKeyedCollection.cs" />
     <Compile Include="Map\FormatAttribute.cs" />
     <Compile Include="Map\IFormatMatching.cs" />
