--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -14,13 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="FastExpressionCompiler" Version="1.10.1" />
+    <PackageReference Include="System.Reflection.DispatchProxy" Version="4.5.1" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.Reflection.DispatchProxy">
-      <HintPath>..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.0.0\ref\netcoreapp2.0\System.Reflection.DispatchProxy.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
