Adding binding constraints

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -71,13 +71,16 @@
     <Compile Include="Callback\Lifestyle.cs" />
     <Compile Include="Callback\OptionalAttribute.cs" />
     <Compile Include="Callback\Policy\Argument.cs" />
+    <Compile Include="Callback\Policy\Bindings\BindingConstraint.cs" />
+    <Compile Include="Callback\Policy\Bindings\BindingMetadata.cs" />
     <Compile Include="Callback\Policy\BivariantPolicy.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyDescriptor.cs" />
     <Compile Include="Callback\Policy\GenericMapping.cs" />
     <Compile Include="Callback\Policy\ConstructorDispatch.cs" />
     <Compile Include="Callback\Policy\ICallbackPolicyDispatch.cs" />
+    <Compile Include="Callback\Policy\Bindings\IBindingConstraint.cs" />
     <Compile Include="Callback\Policy\MemberDispatch.cs" />
-    <Compile Include="Callback\Policy\RuleContext.cs" />
+    <Compile Include="Callback\Policy\Rules\RuleContext.cs" />
     <Compile Include="Callback\ProxyAttribute.cs" />
     <Compile Include="Callback\ResolvingAttribute.cs" />
     <Compile Include="Callback\SingletonLifestyle.cs" />
@@ -99,20 +102,20 @@
     <Compile Include="Monads.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="IDecorator.cs" />
-    <Compile Include="Callback\Policy\ArgumentRule.cs" />
-    <Compile Include="Callback\Policy\CallbackArgument.cs" />
+    <Compile Include="Callback\Policy\Rules\ArgumentRule.cs" />
+    <Compile Include="Callback\Policy\Rules\CallbackArgument.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyBuilder.cs" />
     <Compile Include="Callback\Policy\ContravariantPolicy.cs" />
     <Compile Include="Callback\Policy\CovariantPolicy.cs" />
-    <Compile Include="Callback\Policy\ExtractArgument.cs" />
+    <Compile Include="Callback\Policy\Rules\ExtractArgument.cs" />
     <Compile Include="Callback\FilterAttribute.cs" />
     <Compile Include="Callback\IFilter.cs" />
-    <Compile Include="Callback\Policy\HandleMethodBinding.cs" />
+    <Compile Include="Callback\Policy\Bindings\HandleMethodBinding.cs" />
     <Compile Include="Callback\Policy\MethodDispatch.cs" />
-    <Compile Include="Callback\Policy\MemberBinding.cs" />
-    <Compile Include="Callback\Policy\PolicyMemberBinding.cs" />
+    <Compile Include="Callback\Policy\Bindings\MemberBinding.cs" />
+    <Compile Include="Callback\Policy\Bindings\PolicyMemberBinding.cs" />
     <Compile Include="Callback\Policy\MemberPipeline.cs" />
-    <Compile Include="Callback\Policy\MethodRule.cs" />
+    <Compile Include="Callback\Policy\Rules\MethodRule.cs" />
     <Compile Include="Callback\Policy\CallbackPolicy.cs" />
     <Compile Include="Callback\CategoryAttribute.cs" />
     <Compile Include="Callback\Policy\HandlerDescriptor.cs" />
@@ -124,11 +127,11 @@
     <Compile Include="Callback\Handles.cs" />
     <Compile Include="Callback\ICallback.cs" />
     <Compile Include="Callback\IHandler.cs" />
-    <Compile Include="Callback\Policy\ReturnAsync.cs" />
-    <Compile Include="Callback\Policy\ReturnRule.cs" />
-    <Compile Include="Callback\Policy\ReturnsKey.cs" />
-    <Compile Include="Callback\Policy\Return.cs" />
-    <Compile Include="Callback\Policy\TargetArgument.cs" />
+    <Compile Include="Callback\Policy\Rules\ReturnAsync.cs" />
+    <Compile Include="Callback\Policy\Rules\ReturnRule.cs" />
+    <Compile Include="Callback\Policy\Rules\ReturnsKey.cs" />
+    <Compile Include="Callback\Policy\Rules\Return.cs" />
+    <Compile Include="Callback\Policy\Rules\TargetArgument.cs" />
     <Compile Include="Callback\Provider.cs" />
     <Compile Include="Callback\Provides.cs" />
     <Compile Include="Callback\Resolving.cs" />
