Added binding constraint support

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -72,10 +72,17 @@
     <Compile Include="Callback\Policy\Argument.cs" />
     <Compile Include="Callback\Policy\Bindings\BindingConstraint.cs" />
     <Compile Include="Callback\Policy\Bindings\BindingMetadata.cs" />
+    <Compile Include="Callback\Policy\Bindings\ConstraintAttribute.cs" />
+    <Compile Include="Callback\Policy\Bindings\ConstraintBuilder.cs" />
+    <Compile Include="Callback\Policy\Bindings\ConstraintFilter.cs" />
+    <Compile Include="Callback\Policy\Bindings\IBindingScope.cs" />
+    <Compile Include="Callback\Policy\Bindings\Metadata.cs" />
+    <Compile Include="Callback\Named.cs" />
     <Compile Include="Callback\Policy\BivariantPolicy.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyDescriptor.cs" />
     <Compile Include="Callback\Policy\GenericMapping.cs" />
     <Compile Include="Callback\Policy\ConstructorDispatch.cs" />
+    <Compile Include="Callback\Policy\IArgumentResolver.cs" />
     <Compile Include="Callback\Policy\ICallbackPolicyDispatch.cs" />
     <Compile Include="Callback\Policy\Bindings\IBindingConstraint.cs" />
     <Compile Include="Callback\Policy\MemberDispatch.cs" />
