--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Callback\HandlerTests.Args.cs" />
     <Compile Include="Callback\HandlerTests.Batch.cs" />
+    <Compile Include="Callback\HandlerTests.Binding.cs" />
     <Compile Include="Callback\HandlerTests.Bundle.cs" />
     <Compile Include="Callback\HandlerTests.Command.cs" />
     <Compile Include="Callback\ResolvingTests.cs" />
