Prevent Contextual lifestyle mismatch

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -95,7 +95,7 @@
     <Compile Include="Callback\SkipFiltersAttribute.cs" />
     <Compile Include="Callback\Trampoline.cs" />
     <Compile Include="Callback\UnmanagedAttribute.cs" />
-    <Compile Include="Context\ContextulLifestyle.cs" />
+    <Compile Include="Context\ContextuaLifestyle.cs" />
     <Compile Include="Infrastructure\CollectionExtensions.cs" />
     <Compile Include="Infrastructure\ConcurrentDictionaryExtensions.cs" />
     <Compile Include="Infrastructure\FastExpressionCompiler.cs" />
