--- a/Source/Miruken.Validate/Miruken.Validate.csproj
+++ b/Source/Miruken.Validate/Miruken.Validate.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Validation.cs" />
     <Compile Include="ValidationAware.cs" />
     <Compile Include="ValidationException.cs" />
-    <Compile Include="ValidationExtensions.cs" />
+    <Compile Include="Handler.Validate.cs" />
     <Compile Include="ValidationMapping.cs" />
     <Compile Include="ValidationOptions.cs" />
     <Compile Include="ValidationOutcome.cs" />
