Enable filters when resolving arguments (lifestyles)

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Callback\Policy\Bindings\ConstraintBuilder.cs" />
     <Compile Include="Callback\Policy\Bindings\ConstraintFilter.cs" />
     <Compile Include="Callback\Policy\Bindings\IBindingScope.cs" />
-    <Compile Include="Callback\Policy\Bindings\Metadata.cs" />
+    <Compile Include="Callback\Policy\Bindings\MetadataConstraint.cs" />
     <Compile Include="Callback\Named.cs" />
     <Compile Include="Callback\Policy\BivariantPolicy.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyDescriptor.cs" />
