--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
@@ -15,8 +15,9 @@
     <copyright>Copyright 2016</copyright>
     <tags>Miruken Validate Castle</tags>
     <dependencies>
-      <dependency id="Miruken.Castle" version="1.0"/>
-      <dependency id="Miruken.Validate" version="1.0"/>
+      <dependency id="Miruken"          version="2.0"/>
+      <dependency id="Miruken.Castle"   version="2.0"/>
+      <dependency id="Miruken.Validate" version="2.0"/>
     </dependencies>
   </metadata>
 </package>
