--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -64,12 +64,14 @@
     <Compile Include="Callback\HandleMethodTests.cs" />
     <Compile Include="Callback\HandlerTests.cs" />
     <Compile Include="Callback\StringKeyTests.cs" />
+    <Compile Include="Callback\TargetActionBuilderTests.cs" />
     <Compile Include="Concurrency\CancellingPromiseTests.cs" />
     <Compile Include="Concurrency\Promise.Task.Tests.cs" />
     <Compile Include="Concurrency\PromiseTests.cs" />
     <Compile Include="Concurrency\TaskExtensionsTests.cs" />
     <Compile Include="Context\ContextTests.cs" />
     <Compile Include="Context\ContextualTests.cs" />
+    <Compile Include="MaybeTests.cs" />
     <Compile Include="Errors\ErrorsHandlerTests.cs" />
     <Compile Include="Graph\TraversalTests.cs" />
     <Compile Include="Graph\TraversingTests.cs" />
@@ -77,7 +79,7 @@
     <Compile Include="Infrastructure\PropertyChangeExtensionsTests.cs" />
     <Compile Include="Infrastructure\TypedKeyedCollectionTests.cs" />
     <Compile Include="Map\MappingTests.cs" />
-    <Compile Include="MonadsTests.cs" />
+    <Compile Include="EitherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntimeHelperTests.cs" />
     <Compile Include="TestRunner.cs" />
