Creted Functional folder

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -134,8 +134,8 @@
     <Compile Include="Map\Handler.Map.cs" />
     <Compile Include="Map\Mapping.cs" />
     <Compile Include="Map\Maps.cs" />
-    <Compile Include="Either.cs" />
-    <Compile Include="Maybe.cs" />
+    <Compile Include="Functional\Either.cs" />
+    <Compile Include="Functional\Maybe.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="IDecorator.cs" />
     <Compile Include="Callback\Policy\Rules\ArgumentRule.cs" />
@@ -201,7 +201,7 @@
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Stage.cs" />
-    <Compile Include="Try.cs" />
+    <Compile Include="Functional\Try.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx" />
