--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Api\Handler.Api.cs" />
     <Compile Include="Api\Identifiable.cs" />
     <Compile Include="Api\IRequest.cs" />
+    <Compile Include="Api\Key.cs" />
+    <Compile Include="Api\KeyExtensions.cs" />
     <Compile Include="Api\Oneway\Oneway.cs" />
     <Compile Include="Api\Oneway\OnewayHandler.cs" />
     <Compile Include="Api\Relationship.cs" />
