--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -133,7 +133,9 @@
     <Compile Include="Infrastructure\CollectionExtensions.cs" />
     <Compile Include="Infrastructure\ConcurrentDictionaryExtensions.cs" />
     <Compile Include="Infrastructure\FastExpressionCompiler.cs" />
+    <Compile Include="Infrastructure\OrderedComparer.cs" />
     <Compile Include="Infrastructure\TypeKeyedCollection.cs" />
+    <Compile Include="IOrdered.cs" />
     <Compile Include="Map\FormatAttribute.cs" />
     <Compile Include="Map\IFormatMatching.cs" />
     <Compile Include="Map\Handler.Map.cs" />
