--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Concurrency\TaskExtensionsTests.cs" />
     <Compile Include="Context\ContextTests.cs" />
     <Compile Include="Context\ContextualTests.cs" />
+    <Compile Include="Infrastructure\OrderedComparerTests.cs" />
     <Compile Include="MaybeTests.cs" />
     <Compile Include="Errors\ErrorsHandlerTests.cs" />
     <Compile Include="Graph\TraversalTests.cs" />
