Added request once support

--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Api\Cache\CacheHandlerTests.cs" />
     <Compile Include="Api\GetStockQuote.cs" />
     <Compile Include="Api\HandlerTests.Api.cs" />
+    <Compile Include="Api\Once\OnceHandlerTests.cs" />
     <Compile Include="Api\Oneway\OnewayHandlerTests.cs" />
     <Compile Include="Api\Route\RouteTests.cs" />
     <Compile Include="Api\Schedule\ConcurrentTests.cs" />
