Added CallbackContext to collapse parameters and simplify unhandled

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Api\StashOf.cs" />
     <Compile Include="Callback\Batch.cs" />
     <Compile Include="Callback\Batched.cs" />
+    <Compile Include="Callback\CallbackContext.cs" />
     <Compile Include="Callback\DynamicFilter.cs" />
     <Compile Include="Callback\FilteredObject.cs" />
     <Compile Include="Callback\FilterInstancesProvider.cs" />
