--- a/Test/Miruken.Secure.Tests/Miruken.Secure.Tests.csproj
+++ b/Test/Miruken.Secure.Tests/Miruken.Secure.Tests.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.2;net461;net48</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
