Fixed Miruken tests conditional build

--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -15,7 +15,7 @@
     </PropertyGroup>
 
     <!-- compilation flags -->
-    <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
+    <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.2'">
         <DefineConstants>NETSTANDARD</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(TargetFramework)' == 'net461'">
